# atocha-octopus-chain

./: .gitignore  Cargo.toml  Dockerfile  README.md  appchain_barnacle_runtime.compact.compressed.125.wasm  appchain_barnacle_runtime.compact.compressed.126.wasm  appchain_barnacle_runtime.compact.compressed.127.wasm  atocha-function-spec.md  build.dockerfile.yml  docker-compose.yml
.maintain/: frame-weight-template.hbs
constants/: Cargo.toml
constants/src/: lib.rs
node/: Cargo.toml
node/res/: atocha-chain-spec-raw.json  atocha-chain-spec.json  runtime-106.txt  runtime-107.txt  runtime-108.txt
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/atocha/: Cargo.toml
pallets/atocha/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/atocollective/: Cargo.toml
pallets/atocollective/src/: lib.rs  tests.rs
pallets/atofinance/: Cargo.toml  README.md
pallets/atofinance/src/: lib.rs  migrations.rs  mock.rs  tests.rs  traits.rs  types.rs
pallets/atofinance/src/imps/: challenge_manager.rs  mod.rs  point_exchange.rs  point_manager.rs  point_reward.rs  token_reward.rs
pallets/atofinance/src/tests/: test_IAtoChallenge.rs  test_IPointExchange.rs  test_IPuzzleLedger.rs  test_IPuzzlePoints.rs  test_IPuzzleReward_Of_Points.rs  test_IPuzzleReward_Of_Tokens.rs
pallets/elections-phragmen/: Cargo.toml
resources/: atocha-chain-local-test-spec-raw.json  atocha-chain-spec-mainnet-18.json  atocha-chain-spec-mainnet.json  atocha-chain-spec-mainnet.will.del.json  atocha-chain-spec-testnet.json  atocha-chain-spec.json  atocha-protocol-raw-devnet.json  atocha-protocol-raw-mainnet.json  atocha-protocol-raw-testnet.json  atocha-protocol-raw.json  chainspec-otc-template.json  chainspec-snippet-mainnet.json  runtime-108.txt  runtime-110.txt
runtime/: Cargo.toml
runtime/src/: lib.rs
