[package]
authors = ['Atocha-Group']
description = 'Atocha puzzle main mod.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'MIT'
name = 'pallet-atocha'
readme = 'README.md'
repository = 'https://github.com/atocha-protocol/atocha-chain-node'
version = '1.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
atocha-constants = { path = '../../constants', default-features = false, version = '1.0.0' }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-benchmarking = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4", default-features = false }
sp-std = {default-features = false, version = '3.0.0'}
sha2 = {default-features = false, version = '0.9.8'}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
pallet-atofinance = { path = '../../pallets/atofinance', default-features = false, version = '1.0.0' }

[dev-dependencies]
serde = { version = '1.0.119' }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'log/std',
    'hex/std',
    'pallet-atofinance/std',
    "scale-info/std",
    'sp-application-crypto/std',
    'sp-core/std',
]
try-runtime = ['frame-support/try-runtime']

